--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/core": "^14.1.0",
     "@angular/forms": "^14.1.0",
     "@angular/material": "^14.2.7",
+    "@angular/material-moment-adapter": "^16.0.1",
     "@angular/platform-browser": "^14.1.0",
     "@angular/platform-browser-dynamic": "^14.1.0",
     "@angular/router": "^14.1.0",
@@ -24,9 +25,11 @@
     "@ngrx/router-store": "^14.3.3",
     "@ngrx/store": "^14.3.3",
     "@ngrx/store-devtools": "^14.3.3",
-    "@syncfusion/ej2-angular-grids": "^21.2.5",
+    "ag-grid-angular": "^29.3.5",
+    "ag-grid-community": "^29.3.5",
     "bootstrap": "^4.6.1",
     "jquery": "^3.6.0",
+    "moment": "^2.29.4",
     "ngx-bootstrap": "^9.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
